template styles updates

--- a/support-email-templates/SV_DP_AllGiftGiverConfirmation.html
+++ b/support-email-templates/SV_DP_AllGiftGiverConfirmation.html
@@ -182,7 +182,7 @@
                                 </td>
                               </tr>
                               <tr>
-                                <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
+                                <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#000000; padding: 0 12px 16px 12px;">
                                   <strong>Hello {{name}},</strong>
                                   <br />
                                   Your Digital Subscription order has been placed successfully.
@@ -201,35 +201,35 @@
                                 </td>
                               </tr>
                               <tr>
-                                <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 4px 12px;">
+                                <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#000000; padding: 0 12px 4px 12px;">
                                   <strong>Gift recepient</strong>
                                 </td>
                               </tr>
                               <tr>
-                                <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
+                                <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#000000; padding: 0 12px 16px 12px;">
                                   {{api_trigger_properties.${gift_recipient_first_name}}} {{api_trigger_properties.${gift_recipient_last_name}}}<br />
                                   {{api_trigger_properties.${gift_recipient_email}}}
                                 </td>
                               </tr>
                               {% if api_trigger_properties.${gift_personal_message} != blank %}
                               <tr>
-                                <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 4px 12px;">
+                                <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#000000; padding: 0 12px 4px 12px;">
                                   <strong>Personal message</strong>
                                 </td>
                               </tr>
                               <tr>
-                                <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
+                                <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#000000; padding: 0 12px 16px 12px;">
                                   {{api_trigger_properties.${gift_personal_message}}}
                                 </td>
                               </tr>
                               {% endif %}
                               <tr>
-                                <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 4px 12px;">
+                                <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#000000; padding: 0 12px 4px 12px;">
                                   <strong>Delivery date</strong>
                                 </td>
                               </tr>
                               <tr>
-                                <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
+                                <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#000000; padding: 0 12px 16px 12px;">
                                   {{api_trigger_properties.${gift_delivery_date}}}
                                 </td>
                               </tr>
@@ -244,33 +244,33 @@
                                 </td>
                               </tr>
                               <tr>
-                                <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 4px 12px;">
+                                <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#000000; padding: 0 12px 4px 12px;">
                                   <strong>Name</strong>
                                 </td>
                               </tr>
                               <tr>
-                                <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
+                                <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#000000; padding: 0 12px 16px 12px;">
                                   {{api_trigger_properties.${gifter_first_name}}} {{api_trigger_properties.${gifter_last_name}}}
                                 </td>
                               </tr>
                               <tr>
-                                <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 4px 12px;">
+                                <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#000000; padding: 0 12px 4px 12px;">
                                   <strong>Subscription details</strong>
                                 </td>
                               </tr>
                               <tr>
-                                <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
+                                <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#000000; padding: 0 12px 16px 12px;">
                                   {{api_trigger_properties.${subscription_details}}}
                                 </td>
                               </tr>
                               <tr>
-                                <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 4px 12px;">
+                                <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#000000; padding: 0 12px 4px 12px;">
                                   <strong>Payment details</strong>
                                 </td>
                               </tr>
                               <tr>
-                                <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
-                                  <table cellspacing="0" width="100%" cellpadding="0" border="0" style="table-layout: fixed; margin: 0px; padding: 0px; text-decoration: none; font-size: 17px; line-height: 25px; font-family: Georgia; font-style: normal; font-weight: 400; color: #052962;">
+                                <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#000000; padding: 0 12px 16px 12px;">
+                                  <table cellspacing="0" width="100%" cellpadding="0" border="0" style="table-layout: fixed; margin: 0px; padding: 0px; text-decoration: none; font-size: 17px; line-height: 25px; font-family: Georgia; font-style: normal; font-weight: 400; color: #000000;">
                                     <tr>
                                       <td width="200" align="left" valign="top" style="font-size: 17px; line-height: 25px; font-family: 'GH Guardian Headline Regular', Georgia, serif; font-weight: normal;">
                                         Method
@@ -327,22 +327,22 @@
                                 </td>
                               </tr>
                               <tr>
-                                <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 4px 12px;">
+                                <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#000000; padding: 0 12px 4px 12px;">
                                   <strong>Payment date</strong>
                                 </td>
                               </tr>
                               <tr>
-                                <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
+                                <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#000000; padding: 0 12px 16px 12px;">
                                   {{api_trigger_properties.${date_of_first_payment}}}
                                 </td>
                               </tr>
                               <tr>
-                                <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 4px 12px;">
+                                <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#000000; padding: 0 12px 4px 12px;">
                                   <strong>What&rsquo;s included?</strong>
                                 </td>
                               </tr>
                               <tr>
-                                <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
+                                <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#000000; padding: 0 12px 16px 12px;">
                                   <ul style="list-style: none; margin: 0; padding: 0;">
                                     <li style="padding-left: 20px; margin-bottom: 6px;">
                                       <div style="display: inline-block; border-radius: 6px; height: 12px; width: 12px; margin-right: 8px; margin-left: -20px; background-color: #ffe500;"></div>The Guardian Editions app
@@ -351,7 +351,7 @@
                                       <div style="display: inline-block; border-radius: 6px; height: 12px; width: 12px; margin-right: 8px; margin-left: -20px; background-color: #ffe500;"></div>Premium access to The Guardian Live app
                                     </li>
                                     <li style="padding-left: 20px; margin-bottom: 6px;">
-                                      <div style="display: inline-block; border-radius: 6px; height: 12px; width: 12px; margin-right: 8px; margin-left: -20px; background-color: #ffe500;"></div>Ad-free reading on <a href="https://www.theguardian.com" style="color:#052962; text-decoration: underline;">theguardian.com</a>
+                                      <div style="display: inline-block; border-radius: 6px; height: 12px; width: 12px; margin-right: 8px; margin-left: -20px; background-color: #ffe500;"></div>Ad-free reading on <a target="_blank" href="https://www.theguardian.com" style="color:#000000; text-decoration: underline;">theguardian.com</a>
                                     </li>
                                   </ul>
                                 </td>
@@ -380,7 +380,7 @@
                                           </tr>
                                           <tr>
                                             <td style="font-size: 17px; line-height: 25px; font-family: 'Guardian Text Sans Bold', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif; font-weight:normal; text-align:left; min-width:auto !important; color:#ffe500; padding-bottom: 16px;" align="left">
-                                              <a href="https://support.theguardian.com/r/{{api_trigger_properties.${gift_code}}}" style="color:#ffe500; text-decoration: underline">
+                                              <a target="_blank" href="https://support.theguardian.com/r/{{api_trigger_properties.${gift_code}}}" style="color:#ffe500; text-decoration: underline">
                                                 https://support.theguardian.com/r/{{api_trigger_properties.${gift_code}}}
                                               </a>
                                             </td>
@@ -407,7 +407,7 @@
                                   <table width="100%" border="0" cellspacing="0" cellpadding="0">
                                     <tr>
                                       <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#ffffff; padding-top: 16px;">
-                                        If you need any more information, please visit our <a href="https://www.theguardian.com/info/2014/aug/06/guardian-observer-digital-subscriptions-faq" style="color: #ffffff"><u>help page</u></a>.
+                                        If you need any more information, please visit our <a target="_blank" href="https://www.theguardian.com/info/2014/aug/06/guardian-observer-digital-subscriptions-faq" style="color: #ffffff"><u>help page</u></a>.
                                         <br /><br />
                                         Thank you again for buying a gift subscription to The Guardian.
                                       </td>
