--- a/support-email-templates/SV_DP_AllGiftRecipeintWelcomeDay0.html
+++ b/support-email-templates/SV_DP_AllGiftRecipeintWelcomeDay0.html
@@ -57,6 +57,13 @@
     }
 
     @font-face {
+      font-family: 'GT Guardian Titlepiece';
+      src: url('https://pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GTGuardianTitlepiece-Bold.woff2');
+      font-weight: 700;
+      font-style: normal;
+    }
+
+    @font-face {
       font-family: 'Guardian Text Sans Bold';
       src: url('https://pasteup.guim.co.uk/webfonts/1.0.0/full-autohinted/GuardianTextSans-Bold.woff2') format('woff2');
       font-weight: 700;
@@ -179,7 +186,7 @@
                           <td style="padding-top: 16px">
                             <table width="100%" border="0" cellspacing="0" cellpadding="0">
                               <tr>
-                                <td style="font-size:50px; line-height:56px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
+                                <td style="font-size:70px; line-height:80px; font-family: 'GT Guardian Titlepiece', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
                                   <strong>You&rsquo;re all set {{api_trigger_properties.${gift_recipient_first_name}}}</strong>
                                 </td>
                               </tr>
