--- a/support-email-templates/SV_DP_AllGiftRecipientRedemption.html
+++ b/support-email-templates/SV_DP_AllGiftRecipientRedemption.html
@@ -62,6 +62,13 @@
       font-weight: 700;
       font-style: normal;
     }
+
+    @font-face {
+      font-family: 'GT Guardian Titlepiece';
+      src: url('https://pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GTGuardianTitlepiece-Bold.woff2');
+      font-weight: 700;
+      font-style: normal;
+    }
   </style>
   <!--<![endif]-->
   <style type="text/css" media="screen">
@@ -161,8 +168,8 @@
                           <td style="padding-top: 16px;">
                             <table width="100%" border="0" cellspacing="0" cellpadding="0">
                               <tr>
-                                <td style="font-size:50px; line-height:56px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
-                                  <strong>A gift for you from {{api_trigger_properties.${gifter_first_name}}}</strong>
+                                <td style="font-size:70px; line-height:80px; font-family: 'GT Guardian Titlepiece', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
+                                  A gift for you from {{api_trigger_properties.${gifter_first_name}}}
                                 </td>
                               </tr>
                               {% if api_trigger_properties.${gift_personal_message} != blank %}
@@ -172,7 +179,7 @@
                                 </td>
                               </tr>
                               <tr>
-                                <td style="font-size:21px; line-height:30px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
+                                <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#000000; padding: 0 12px 16px 12px;">
                                   &quot;{{api_trigger_properties.${gift_personal_message}}}&quot;
                                 </td>
                               </tr>
@@ -189,7 +196,7 @@
                       <table width="100%" border="0" cellspacing="0" cellpadding="0">
                         <tbody>
                           <tr>
-                            <td style="font-size:34px; line-height:42px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#ffffff; padding: 16px 12px 0 12px;">
+                            <td style="font-size:34px; line-height:40px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#ffffff; padding: 16px 12px 0 12px;">
                               <strong>The Guardian Digital Subscription for {{api_trigger_properties.${duration}}}</strong>
                             </td>
                           </tr>
@@ -204,7 +211,7 @@
                             </td>
                           </tr>
                           <tr>
-                            <td style="font-size:21px; line-height:30px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#ffffff; padding: 16px 12px 16px 12px;">
+                            <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#ffffff; padding: 16px 12px 16px 12px;">
                               <ul style="list-style: none; margin: 0; padding: 0;">
                                 <li style="padding-left: 20px; margin-bottom: 6px;">
                                   <div style="display: inline-block; border-radius: 6px; height: 12px; width: 12px; margin-right: 8px; margin-left: -20px; background-color: #ffe500;"></div>The Guardian Editions app
@@ -213,7 +220,7 @@
                                   <div style="display: inline-block; border-radius: 6px; height: 12px; width: 12px; margin-right: 8px; margin-left: -20px; background-color: #ffe500;"></div>Premium access to The Guardian Live app
                                 </li>
                                 <li style="padding-left: 20px; margin-bottom: 6px;">
-                                  <div style="display: inline-block; border-radius: 6px; height: 12px; width: 12px; margin-right: 8px; margin-left: -20px; background-color: #ffe500;"></div>Ad-free reading on theguardian.com
+                                  <div style="display: inline-block; border-radius: 6px; height: 12px; width: 12px; margin-right: 8px; margin-left: -20px; background-color: #ffe500;"></div>Ad-free reading on <a target="_blank" href="https://www.theguardian.com" style="color:#ffffff; text-decoration: underline;">theguardian.com</a>
                                 </li>
                               </ul>
                             </td>
@@ -236,12 +243,12 @@
                           <td>
                             <table width="100%" border="0" cellspacing="0" cellpadding="0">
                               <tr>
-                                <td style="font-size:34px; line-height:42px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
+                                <td style="font-size:34px; line-height:40px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
                                   <strong>Start enjoying your gift today!</strong>
                                 </td>
                               </tr>
                               <tr>
-                                <td style="font-size:21px; line-height:30px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
+                                <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#000000; padding: 0 12px 16px 12px;">
                                   Simply click on the button below.
                                 </td>
                               </tr>
@@ -255,8 +262,8 @@
                                 </td>
                               </tr>
                               <tr>
-                                <td style="font-size:21px; line-height:30px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
-                                  If you need any more information, please visit our <a href="https://www.theguardian.com/info/2014/aug/06/guardian-observer-digital-subscriptions-faq" style="color: #052962"><u>help page</u></a>.
+                                <td style="font-size: 15px; line-height: 22px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#000000; padding: 0 12px 16px 12px;">
+                                  If you need any more information, please visit our <a target="_blank" href="https://www.theguardian.com/info/2014/aug/06/guardian-observer-digital-subscriptions-faq" style="color: #000000"><u>help page</u></a>.
                                 </td>
                               </tr>
                               <tr>
@@ -265,7 +272,7 @@
                                 </td>
                               </tr>
                               <tr>
-                                <td style="font-size:21px; line-height:30px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
+                                <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#000000; padding: 0 12px 16px 12px;">
                                   The gift is redeemable until <strong>{{api_trigger_properties.${last_redemption_date}}}</strong>
                                 </td>
                               </tr>
@@ -289,7 +296,7 @@
 
                   <!-- Footer -->
                   <tr>
-                    <td style="font-size:21px; line-height:30px; color:#000001; font-family:'GH Guardian Headline', Georgia, serif; text-align:center; padding: 12px;">
+                    <td style="font-size: 17px; line-height: 25px; color:#000001; font-family:'GH Guardian Headline', Georgia, serif; text-align:center; padding: 12px;">
                       <table border="0" cellpadding="0" cellspacing="0" width="100%" style="border-collapse: collapse; background-color: #ffffff; max-width: 600px;" bgcolor="#ffffff">
                         <tbody>
                           <tr>
