--- a/support-email-templates/SV_DP_AllGiftRecipientRedemption.html
+++ b/support-email-templates/SV_DP_AllGiftRecipientRedemption.html
@@ -169,7 +169,7 @@
                             <table width="100%" border="0" cellspacing="0" cellpadding="0">
                               <tr>
                                 <td style="font-size:70px; line-height:80px; font-family: 'GT Guardian Titlepiece', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
-                                  A gift for you from {{api_trigger_properties.${gifter_first_name}}}
+                                  A gift for you from {{api_trigger_properties.${gifter_first_name}}} {{api_trigger_properties.${gifter_last_name}}}
                                 </td>
                               </tr>
                               {% if api_trigger_properties.${gift_personal_message} != blank %}
