fix titlepiece font-face

--- a/support-email-templates/SV_DP_AllGiftRecipeintWelcomeDay0.html
+++ b/support-email-templates/SV_DP_AllGiftRecipeintWelcomeDay0.html
@@ -72,7 +72,7 @@
 
     @font-face {
       font-family: 'GT Guardian Titlepiece';
-      src: url('https://pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GTGuardianTitlepiece-Bold.woff2');
+      src: url('https://pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GTGuardianTitlepiece-Bold.woff2') format('woff2');
       font-weight: 700;
       font-style: normal;
     }
