style and copy changes

--- a/support-email-templates/SV_DP_AllGiftRecipeintWelcomeDay0.html
+++ b/support-email-templates/SV_DP_AllGiftRecipeintWelcomeDay0.html
@@ -193,7 +193,7 @@
                           <td style="padding-top: 16px">
                             <table width="100%" border="0" cellspacing="0" cellpadding="0">
                               <tr>
-                                <td style="font-size:70px; line-height:80px; font-family: 'GT Guardian Titlepiece', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
+                                <td style="font-size:50px; line-height:58px; font-family: 'GT Guardian Titlepiece', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
                                   You&rsquo;re all set {{api_trigger_properties.${gift_recipient_first_name}}}
                                 </td>
                               </tr>
@@ -284,7 +284,7 @@
                                   <table width="100%" border="0" cellspacing="0" cellpadding="0">
                                     {% if {{custom_attribute.${region}}} == 'United Kingdom' %}
                                     <tr>
-                                      <td style="font-size: 34px; line-height: 40px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#ffffff; padding-bottom: 16px;">
+                                      <td style="font-size: 24px; line-height: 28px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#ffffff; padding-bottom: 16px;">
                                         <strong>Download The UK Daily in The Guardian Editions app</strong>
                                       </td>
                                     </tr>
@@ -297,7 +297,7 @@
                                     </tr>
                                     {% elsif {{custom_attribute.${region}}} == 'Australia' %}
                                     <tr>
-                                      <td style="font-size: 34px; line-height: 40px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#ffffff; padding-bottom: 16px;">
+                                      <td style="font-size: 24px; line-height: 28px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#ffffff; padding-bottom: 16px;">
                                         <strong>Download Australia Weekend in the Guardian Editions app</strong>
                                       </td>
                                     </tr>
@@ -310,7 +310,7 @@
                                     </tr>
                                     {% elsif {{custom_attribute.${region}}} == 'United States' %}
                                     <tr>
-                                      <td style="font-size: 34px; line-height: 40px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#ffffff; padding-bottom: 16px;">
+                                      <td style="font-size: 24px; line-height: 28px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#ffffff; padding-bottom: 16px;">
                                         <strong>Download The Guardian Editions app</strong>
                                       </td>
                                     </tr>
@@ -321,7 +321,7 @@
                                     </tr>
                                     {% else %}
                                     <tr>
-                                      <td style="font-size: 34px; line-height: 40px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#ffffff; padding-bottom: 16px;">
+                                      <td style="font-size: 24px; line-height: 28px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#ffffff; padding-bottom: 16px;">
                                         <strong>Download The UK Daily in The Guardian Editions app</strong>
                                       </td>
                                     </tr>
@@ -343,7 +343,7 @@
                                       </td>
                                     </tr>
                                     <tr>
-                                      <td style="font-size: 34px; line-height: 40px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#ffffff; padding-bottom: 16px;">
+                                      <td style="font-size: 24px; line-height: 28px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#ffffff; padding-bottom: 16px;">
                                         <strong>Download The Live app</strong>
                                       </td>
                                     </tr>
@@ -371,8 +371,8 @@
                                       </td>
                                     </tr>
                                     <tr>
-                                      <td style="font-size: 34px; line-height: 40px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#ffffff; padding-bottom: 16px;">
-                                        <strong>Sign into <a href="https://profile.theguardian.com/signin" style="color: #ffffff">theguardian.com</strong></a>
+                                      <td style="font-size: 24px; line-height: 28px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#ffffff; padding-bottom: 16px;">
+                                        <strong>Sign into <a href="https://profile.theguardian.com/signin" style="color: #ffffff; text-decoration: underline; font-family:'GH Guardian Headline Semibold', Georgia, serif" target="_blank">theguardian.com</a></strong>
                                       </td>
                                     </tr>
                                     <tr>
