--- a/support-email-templates/SV_DP_AllGiftGiverConfirmation.html
+++ b/support-email-templates/SV_DP_AllGiftGiverConfirmation.html
@@ -176,18 +176,18 @@
                           <td style="padding-top: 16px;">
                             <table width="100%" border="0" cellspacing="0" cellpadding="0">
                               <tr>
-                                <td style="font-size:70px; line-height:80px; font-family: 'GT Guardian Titlepiece', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
-                                  You’re all set.<br />
-                                  Thank you
+                                <td style="font-size:50px; line-height:58px; font-family: 'GT Guardian Titlepiece', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
+                                  Thank you for<br>
+                                  choosing The Guardian
                                 </td>
                               </tr>
                               <tr>
                                 <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#000000; padding: 0 12px 16px 12px;">
                                   <strong>Hello {{name}},</strong>
-                                  <br />
-                                  Your Digital Subscription order has been placed successfully.
                                   <br /><br />
-                                  You&rsquo;ll find all the details about your gift below, and we&rsquo;ll send an email to {{api_trigger_properties.${gift_recipient_first_name}}} on the date chosen by you.
+                                  Your Digital Subscription gift has been placed successfully, and we&rsquo;ll send an email to {{api_trigger_properties.${gift_recipient_first_name}}} on the date chosen by you.
+                                  <br /><br />
+                                  In this email you&rsquo;ll find all the details about your gift below. Please take a moment to make sure they are correct.
                                 </td>
                               </tr>
                               <tr>
@@ -196,7 +196,7 @@
                                 </td>
                               </tr>
                               <tr>
-                                <td style="font-size: 34px; line-height: 40px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
+                                <td style="font-size: 24px; line-height: 28px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
                                   <strong>Your gift</strong>
                                 </td>
                               </tr>
@@ -239,7 +239,7 @@
                                 </td>
                               </tr>
                               <tr>
-                                <td style="font-size: 34px; line-height: 40px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
+                                <td style="font-size: 24px; line-height: 28px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
                                   <strong>Order summary</strong>
                                 </td>
                               </tr>
@@ -369,7 +369,7 @@
                                       <td valign="top">
                                         <table width="100%" border="0" cellspacing="0" cellpadding="0">
                                           <tr>
-                                            <td style="font-size: 34px; line-height: 40px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#ffffff; padding-bottom: 16px;">
+                                            <td style="font-size: 24px; line-height: 28px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#ffffff; padding-bottom: 16px;">
                                               <strong>What happens next?</strong>
                                             </td>
                                           </tr>
