--- a/support-email-templates/SV_DP_AllGiftGiverConfirmation.html
+++ b/support-email-templates/SV_DP_AllGiftGiverConfirmation.html
@@ -344,9 +344,15 @@
                               <tr>
                                 <td style="font-size: 17px; line-height: 25px; font-family:'GH Guardian Headline Regular', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#000000; padding: 0 12px 16px 12px;">
                                   <ul style="list-style: none; margin: 0; padding: 0;">
+                                    {% if {{custom_attribute.${region}}} == 'Australia' %}
+                                    <li style="padding-left: 20px; margin-bottom: 6px;">
+                                      <div style="display: inline-block; border-radius: 6px; height: 12px; width: 12px; margin-right: 8px; margin-left: -20px; background-color: #ffe500;"></div>The Guardian Editions app, including Australia Weekend
+                                    </li>
+                                    {% else %}
                                     <li style="padding-left: 20px; margin-bottom: 6px;">
                                       <div style="display: inline-block; border-radius: 6px; height: 12px; width: 12px; margin-right: 8px; margin-left: -20px; background-color: #ffe500;"></div>The Guardian Editions app
                                     </li>
+                                    {% endif %}
                                     <li style="padding-left: 20px; margin-bottom: 6px;">
                                       <div style="display: inline-block; border-radius: 6px; height: 12px; width: 12px; margin-right: 8px; margin-left: -20px; background-color: #ffe500;"></div>Premium access to The Guardian Live app
                                     </li>
