--- a/support-email-templates/SV_DP_AllGiftRecipeintWelcomeDay0.html
+++ b/support-email-templates/SV_DP_AllGiftRecipeintWelcomeDay0.html
@@ -57,13 +57,6 @@
     }
 
     @font-face {
-      font-family: 'GT Guardian Titlepiece';
-      src: url('https://pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GTGuardianTitlepiece-Bold.woff2');
-      font-weight: 700;
-      font-style: normal;
-    }
-
-    @font-face {
       font-family: 'Guardian Text Sans Bold';
       src: url('https://pasteup.guim.co.uk/webfonts/1.0.0/full-autohinted/GuardianTextSans-Bold.woff2') format('woff2');
       font-weight: 700;
@@ -72,7 +65,7 @@
 
     @font-face {
       font-family: 'GT Guardian Titlepiece';
-      src: url('https://pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GTGuardianTitlepiece-Bold.woff2') format('woff2');
+      src: url('https://pasteup.guim.co.uk/webfonts/1.0.0/full-autohinted/GTGuardianTitlepiece-Bold.woff2') format('woff2');
       font-weight: 700;
       font-style: normal;
     }
@@ -191,7 +184,7 @@
                           <td style="padding-top: 16px">
                             <table width="100%" border="0" cellspacing="0" cellpadding="0">
                               <tr>
-                                <td style="font-size:50px; line-height:58px; font-family: 'GT Guardian Titlepiece', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
+                                <td style="font-size:50px; line-height:58px; font-family: 'GT Guardian Titlepiece', Georgia, serif; font-weight:700; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
                                   You&rsquo;re all set {{name}}
                                 </td>
                               </tr>
