--- a/support-email-templates/SV_DP_AllGiftRecipientRedemption.html
+++ b/support-email-templates/SV_DP_AllGiftRecipientRedemption.html
@@ -65,7 +65,7 @@
 
     @font-face {
       font-family: 'GT Guardian Titlepiece';
-      src: url('https://pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GTGuardianTitlepiece-Bold.woff2') format('woff2');
+      src: url('https://pasteup.guim.co.uk/webfonts/1.0.0/full-autohinted/GTGuardianTitlepiece-Bold.woff2') format('woff2');
       font-weight: 700;
       font-style: normal;
     }
@@ -168,7 +168,7 @@
                           <td style="padding-top: 16px;">
                             <table width="100%" border="0" cellspacing="0" cellpadding="0">
                               <tr>
-                                <td style="font-size:50px; line-height:58px; font-family: 'GT Guardian Titlepiece', Georgia, serif; font-weight:normal; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
+                                <td style="font-size:50px; line-height:58px; font-family: 'GT Guardian Titlepiece', Georgia, serif; font-weight:700; text-align:left; min-width:auto !important; color:#052962; padding: 0 12px 16px 12px;">
                                   A gift for you from {{api_trigger_properties.${gifter_first_name}}}
                                 </td>
                               </tr>
